cabal-version:      2.4
name:               parser-generator
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
      ParserGenerator 

    other-modules:
      ParserGenerator.Cfgparser
      ParserGenerator.DFA
      ParserGenerator.Grammar
      ParserGenerator.ParserCodeGenerator
      ParserGenerator.ParserRequirements
      ParserGenerator.ParserRequirementsCode
      ParserGenerator.ShiftReduce
      ParserGenerator.ShiftReducePreProcess

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.16.0.0
      , unordered-containers
      , hashable
      , lens
      , mtl
      , split
      , transformers
      , safe
      , directory
      , filepath
    hs-source-dirs:   src
    default-language: Haskell2010
